--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
-#testing
-#testing 2
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Volunteer Matching App</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js"></script>
+</head>
+<body>  
+    <section id="intro-page">
+        <div class="content-wrapper">
+            <h2>Get Started</h2>
+            <button>Log in</button>
+            <button>Sign up</button>
+        </div>
+        <div class="background-right"></div>
+    </section>
+</body>
+<footer>
+
+
+</footer>
+</html>
