--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>  
     <section id="intro-page">
-        <div class="content-wrapper">
+        <div class="login">
             <h2>Get Started</h2>
             <button>Log in</button>
             <button>Sign up</button>
@@ -17,8 +17,4 @@
         <div class="background-right"></div>
     </section>
 </body>
-<footer>
-
-
-</footer>
 </html>
