--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
             <button>Sign up</button>
         </div>
         <div class="background-right"></div>
+        <div class="words">
+            <span class="word">Environment</span>
+            <span class="word">Education</span>
+            <span class="word">Health</span>
+            <span class="word">Community Development</span>
+            <span class="word">Arts and Culture</span>
+            <span class="word">Animal Welfare</span>
+            <span class="word">Social Services</span>
+            <span class="word">Technology</span>
+            <span class="word">Sports and Recreation</span>
+            <span class="word">Disaster Relief</span>
+        </div>
     </section>
 </body>
 </html>
