update all files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="background-right"></div>
         <div class="words">
-            <span class="word">Environment</span>
+            <span class="word" style="display: none;">Environment</span>
             <span class="word">Education</span>
             <span class="word">Health</span>
             <span class="word">Community Development</span>
