--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
 </head>
-<body>  
+<body>
+    <!-- Intro/Home Page Section -->  
     <section id="intro-page">
         <div class="login">
             <h2>Get Started</h2>
@@ -28,5 +29,54 @@
             <span class="word">Disaster Relief</span>
         </div>
     </section>
+    
+    <!-- Login Section -->
+    <section id="login-page" style="display:none;">
+        <h2>Login</h2>
+        <form action="/login" method="POST">
+            <input type="email" name="email" placeholder="Enter your email" required>
+            <input type="password" name="password" placeholder="Enter your password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <button onclick="showSignup()">Sign up here</button></p>
+    </section>
+
+    <!-- Registration Section -->
+    <section id="signup-page" style="display:none;">
+        <h2>Sign Up</h2>
+        <form action="/register" method="POST">
+            <input type="email" name="email" placeholder="Enter your email" required>
+            <input type="password" name="password" placeholder="Create a password" required>
+            <select name="interest">
+                <option value="" disabled selected>Select your interest</option>
+                <option value="Environment">Environment</option>
+                <option value="Education">Education</option>
+                <option value="Health">Health</option>
+                <option value="Community Development">Community Development</option>
+                <option value="Arts and Culture">Arts and Culture</option>
+                <option value="Animal Welfare">Animal Welfare</option>
+                <option value="Social Services">Social Services</option>
+                <option value="Technology">Technology</option>
+                <option value="Sports and Recreation">Sports and Recreation</option>
+                <option value="Disaster Relief">Disaster Relief</option>
+            </select>
+            <button type="submit">Sign Up</button>
+        </form>
+        <p>Already have an account? <button onclick="showLogin()">Login here</button></p>
+    </section>
+
+    <script>
+        function showLogin() {
+            document.getElementById('intro-page').style.display = 'none';
+            document.getElementById('signup-page').style.display = 'none';
+            document.getElementById('login-page').style.display = 'block';
+        }
+
+        function showSignup() {
+            document.getElementById('intro-page').style.display = 'none';
+            document.getElementById('login-page').style.display = 'none';
+            document.getElementById('signup-page').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
