sign up log in added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <section id="intro-page">
         <div class="login">
             <h2>Get Started</h2>
-            <button>Log in</button>
-            <button>Sign up</button>
+            <button onclick="showLogin()">Log in</button> <!-- Added onclick event here -->
+            <button onclick="showSignup()">Sign up</button> <!-- Added onclick event here -->
         </div>
         <div class="background-right"></div>
         <div class="words">
