--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <!-- Intro/Home Page Section -->  
     <section id="intro-page">
+        <div class="top-icon">
+            <img src="cow.png" alt="Top Icon">
+        </div>
         <div class="login">
             <h2>Get Started</h2>
             <button onclick="showLogin()">Log in</button> <!-- Added onclick event here -->
