--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             <button onclick="showLogin()">Log in</button> <!-- Added onclick event here -->
             <button onclick="showSignup()">Sign up</button> <!-- Added onclick event here -->
         </div>
-        <div class="background-right"></div>
+        <div class="background-right">
+            <div class="copyright">
+                <p>&copy; 2024. All rights reserved.</p>
+            </div>            
+        </div>
         <div class="words">
             <span class="word" style="display: none;">Environment</span>
             <span class="word">Education</span>
@@ -93,4 +97,7 @@
         }
     </script>
 </body>
+<footer>
+
+</footer>
 </html>
