--- a/home.html
+++ b/home.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volunteer Matching App - Home Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="cow.png" alt="Icon">
+        </div>
         <nav>
-            <div class="left-nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Explore</a></li>
-                    <li><a href="#">Search</a></li>
-                </ul>
-            </div>
-            <div class="right-nav">
-                <ul>
-                    <li><a href="#">+</a></li>
-                    <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Explore</a></li>
+                <li><a href="#">Search</a></li>
+            </ul>
         </nav>
+        <div class="user-actions">
+            <a href="#">Add Event</a>
+            <a href="#">Profile</a>
+        </div>
     </header>
 </body>
 </html>
