--- a/explore.html
+++ b/explore.html
@@ -8,6 +8,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <div class="block">
+        <img src="testing.png" alt="Example Image">
+        <p>This is some text describing the content of the block.</p>
+    </div>
 </body>
 </html>
