--- a/explore.html
+++ b/explore.html
@@ -8,9 +8,26 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div class="block">
-        <img src="testing.png" alt="Example Image">
-        <p>This is some text describing the content of the block.</p>
+    <header>
+        <div class="logo">
+            <img src="cow.png" alt="Icon">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Explore</a></li>
+                <li><a href="#">Search</a></li>
+            </ul>
+        </nav>
+        <div class="user-actions">
+            <a href="#">Add Event</a>
+            <a href="#">Profile</a>
+        </div>
+    </header>
+    <div class="explore-container explore-page">
+        <div class="card">
+            <img src="testing.png" alt="Profile Picture" class="card-img">
+        </div>
     </div>
 </body>
 </html>
